# boomerang

./: .clang-format  .cvsignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Changelog.md  Contributing.md  Doxyfile  LICENSE.TERMS  Makefile  Makefile.am  Makefile.in  README  Readme.md  UNIT_TESTING  appveyor.yml  binutils.m4  boomerang-win.vcproj  boomerang.cpp  boomerang.dsp  boomerang.dsw  boomerang.rc  boomerang.sln  boomerang.vcproj  boomerang_VC5.dsp  boomerang_VC5.dsw  boomerang_vs2002.sln  boomerang_vs2002.vcproj  boomerang_vs2005.sln  boomerang_vs2005.vcproj  bootstrap  config.sub  configure  configure.ac  configure.in  dbl_shared.cpp  design.txt  driver.cpp  (+20 more)
db/: .ExpTest.h.swo  .Makefile.swp  BinaryImage.cpp  BinaryImage.h  BinarySymbols.cpp  BinarySymbols.h  CMakeLists.txt  CfgTest.cpp  CfgTest.h  DataflowTest.cpp  DataflowTest.h  DfaTest.cpp  DfaTest.h  ExpTest.cc  ExpTest.cpp  ExpTest.h  Makefile  Makefile.in  ParserTest.cc  ParserTest.cpp  ParserTest.h  ProcTest.cc  ProcTest.cpp  ProcTest.h  ProgTest.cc  ProgTest.cpp  ProgTest.h  RtlTest.cc  RtlTest.cpp  RtlTest.h  SectionInfo.cpp  SectionInfo.h  StatementTest.cpp  StatementTest.h  SymTab.cpp  SymTab.h  TypeTest.cpp  TypeTest.h  basicblock.cc  basicblock.cpp  (+56 more)
db/unit_testing/: CMakeLists.txt  CfgTest.cpp  CfgTest.h  DfaTest.cpp  DfaTest.h  ExpTest.cpp  ExpTest.h  ParserTest.cpp  ParserTest.h  ProcTest.cpp  ProcTest.h  ProgTest.cpp  ProgTest.h  RtlTest.cpp  RtlTest.h  StatementTest.cpp  StatementTest.h  signatureStubs.cpp  testDbase.cpp  testExp.cpp  testExpStubs.cpp  testRtl.cpp  testRtlStubs.cpp  testStmt.cpp  testStmtStubs.cpp  typeStubs.cpp
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  design.txt  mainpage.dox
frontend/: .cvsignore  CMakeLists.txt  FrontPentTest.cc  FrontPentTest.cpp  FrontPentTest.h  FrontSparcTest.cc  FrontSparcTest.cpp  FrontSparcTest.h  FrontendTest.cpp  FrontendTest.h  MachineInstruction.cpp  MachineInstruction.h  Makefile.in  TargetQueue.cpp  frontend.cc  frontend.cpp  mipsdecoder.cpp  mipsdecoder.h  mipsfrontend.cpp  mipsfrontend.h  mltk.sh  mltk.sh.in  njmcDecoder.cc  njmcDecoder.cpp  njmcDecoder.h  pentiumdecoder.cpp  pentiumdecoder.h  pentiumfrontend.cpp  pentiumfrontend.h  ppcdecoder.cpp  ppcdecoder.h  ppcfrontend.cpp  ppcfrontend.h  sparcdecoder.cpp  sparcdecoder.h  sparcfrontend.cpp  sparcfrontend.h  st20decoder.cpp  st20decoder.h  st20frontend.cpp  (+4 more)
frontend/machine/: ssl.ps
frontend/mips/: mipsdecoder.cpp  mipsdecoder.h  mipsfrontend.cpp  mipsfrontend.h
frontend/pentium/: pentiumdecoder.cpp  pentiumdecoder.h  pentiumfrontend.cpp  pentiumfrontend.h
frontend/ppc/: ppcdecoder.cpp  ppcdecoder.h  ppcfrontend.cpp  ppcfrontend.h
frontend/sparc/: sparcdecoder.cpp  sparcdecoder.h  sparcfrontend.cpp  sparcfrontend.h
frontend/st20/: st20decoder.cpp  st20decoder.h  st20frontend.cpp  st20frontend.h
frontend/unit_testing/: CMakeLists.txt  FrontPentTest.cpp  FrontPentTest.h  FrontSparcTest.cpp  FrontSparcTest.h  FrontendTest.cpp  FrontendTest.h  testFront.cpp
loader/: ArchiveFile.cpp  BinaryFile.cc  BinaryFile.cpp  BinaryFileFactory.cpp  BinaryFileStub.cpp  CMakeLists.txt  DOS4GWBinaryFile.cpp  DOS4GWBinaryFile.h  ElfArchiveFile.cpp  ElfBinaryFile.cc  ElfBinaryFile.cpp  ElfBinaryFile.h  ElfDetails.cpp  ElfDetails.h  ExeBinaryFile.cc  ExeBinaryFile.cpp  ExeBinaryFile.h  HpSomBinaryFile.cc  HpSomBinaryFile.cpp  HpSomBinaryFile.h  IntelCoffFile.cpp  IntelCoffFile.h  LoaderTest.cc  LoaderTest.cpp  LoaderTest.h  MachOBinaryFile.cpp  MachOBinaryFile.h  Makefile.in  PalmBinaryFile.cc  PalmBinaryFile.cpp  PalmBinaryFile.h  SymTab.cpp  SymTab.h  Win32BinaryFile.cc  Win32BinaryFile.cpp  Win32BinaryFile.h  bffDump.cc  bffDump.cpp  dos4gwbinaryfile.cpp  dos4gwbinaryfile.h  (+7 more)
loader/elf/: ElfArchiveFile.cpp  ElfBinaryFile.cpp  ElfBinaryFile.h  ElfTypes.h
loader/hpsom/: HpSomBinaryFile.cpp  HpSomBinaryFile.h
loader/machO/: MachOBinaryFile.cpp  MachOBinaryFile.h  macho-apple.h  nlist.h
loader/objc/: List.h  Object.h  Protocol.h  error.h  hashtable.h  malloc.h  objc-class.h  objc-load.h  objc-runtime.h  objc.h  zone.h
loader/palm/: PalmBinaryFile.cpp  PalmBinaryFile.h  palmsystraps.h
loader/unit_testing/: CMakeLists.txt  LoaderTest.cpp  LoaderTest.h
src/: CMakeLists.txt
src/boom_base/: BinaryFile.h  BinaryFileFactory.cpp  BinaryFileStub.h  CMakeLists.txt  Plugin.h  boomerang.cpp  boomerang.h  log.cpp  log.h
src/boomerang/: CMakeLists.txt
src/boomerang-cli/: CMakeLists.txt  CommandlineDriver.cpp  CommandlineDriver.h  Console.cpp  Console.h  Main.cpp  MiniDebugger.cpp  MiniDebugger.h  commandlinedriver.cpp  commandlinedriver.h  main.cpp
src/boomerang-frontend/: CMakeLists.txt  MachineInstruction.cpp  MachineInstruction.h  TargetQueue.cpp  TargetQueue.h  decoder.h  frontend.cpp  frontend.h  njmcDecoder.cpp  njmcDecoder.h
src/boomerang-gui/: About.ui  Boomerang.qrc  CMakeLists.txt  Decompiler.cpp  Decompiler.h  DecompilerThread.cpp  DecompilerThread.h  LoggingSettingsDlg.cpp  LoggingSettingsDlg.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  RTLEditor.cpp  RTLEditor.h  SettingsDlg.cpp  SettingsDlg.h  SettingsDlg.ui  about.ui  boomerang.qrc  boomerang.ui  commandlinedriver.cpp  commandlinedriver.h  main.cpp  mainwindow.cpp  mainwindow.h  mypthread.cpp  rtleditor.cpp  rtleditor.h
src/boomerang-loaders/: CMakeLists.txt  microX86dis.c
src/c/: CMakeLists.txt  ansi-c-parser.cpp  ansi-c-parser.h  ansi-c-scanner.cpp  ansi-c-scanner.h  ansi-c.l  ansi-c.y
src/codegen/: chllcode.cpp  chllcode.h  syntax.cpp
transform/: CMakeLists.txt  Makefile.am  Makefile.in  generic.cpp  generic.h  rdi.cpp  rdi.h  transformation-parser.cpp  transformation-parser.h  transformation-scanner.cpp  transformation-scanner.h  transformation.l  transformation.y  transformer.cpp
ui/: CMakeLists.txt  DecompilerThread.cpp  DecompilerThread.h  LoggingSettingsDlg.h  LoggingSettingsDlg.ui  boomerang.qrc  boomerang.ui  commandlinedriver.cpp  main.cpp  mainwindow.cpp  mainwindow.h  rtleditor.cpp
unit_testing/: CMakeLists.txt  basic_tests.cpp  basic_tests.h  testloader.cpp  testloader.h
(+4035 files in other folders)
