INCLUDE_DIRECTORIES(../c/) # used by prog.cpp
SET(INCLUDES
../include/basicblock.h
../include/boomerang.h
../include/constraint.h
../include/exp.h
../include/hllcode.h
../include/memo.h
../include/proc.h
../include/rtl.h
../include/statement.h
../include/type.h
../include/visitor.h
../include/BinaryFile.h
../include/cfg.h
../include/dataflow.h
../include/exphelp.h
../include/log.h
../include/operator.h
../include/prog.h
../include/sigenum.h
../include/TargetQueue.h
../include/types.h
../include/xmlprogparser.h
../include/BinaryFileStub.h
../include/module.h
../include/decoder.h
../include/frontend.h
../include/managed.h
../include/osfcn.h
../include/register.h
../include/signature.h
../include/transformer.h
../include/util.h
)
SET(SRC
        basicblock.cpp
        cfg.cpp
        dataflow.cpp
        exp.cpp
        insnameelem.cpp
        managed.cpp
        proc.cpp
        prog.cpp #-Icodegen -Ic
        module.cpp
        register.cpp
        rtl.cpp
        signature.cpp
        sslinst.cpp
        sslparser.cpp
        sslparser_support.cpp
        sslscanner.cpp
        statement.cpp
        table.cpp
        visitor.cpp
        xmlprogparser.cpp
)
IF(BUILD_TESTING)
ADD_SUBDIRECTORY(unit_testing)
ENDIF()
ADD_LIBRARY(db STATIC ${SRC} ${INCLUDES})
qt5_use_modules(db Core Xml)
