macro(BOOMERANG_ADD_LOADER name)
    set(target_name "${name}BinaryFile")
    add_library(${target_name} MODULE  ${ARGN} )
    target_link_libraries(${target_name} boom_base)
    if(WIN32)
            qt5_use_modules(${target_name} Core)
            set_target_properties(${target_name} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/out/lib")
    endif()
    set_target_properties(${target_name} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/lib")
endmacro()

BOOMERANG_ADD_LOADER(Elf      elf/ElfBinaryFile.cpp elf/ElfBinaryFile.h)
target_link_libraries(ElfBinaryFile util db)
BOOMERANG_ADD_LOADER(Win32    exe/pe/Win32BinaryFile.cpp exe/pe/Win32BinaryFile.h microX86dis.c)
target_link_libraries(Win32BinaryFile util)
IF(MSVC)
    target_link_libraries(Win32BinaryFile Dbghelp.lib)
ENDIF()
BOOMERANG_ADD_LOADER(Exe      exe/dos/ExeBinaryFile.cpp exe/dos/ExeBinaryFile.h)
BOOMERANG_ADD_LOADER(DOS4GW   exe/dos4gw/DOS4GWBinaryFile.cpp exe/dos4gw/DOS4GWBinaryFile.h microX86dis.c)

BOOMERANG_ADD_LOADER(HpSom    hpsom/HpSomBinaryFile.cpp hpsom/HpSomBinaryFile.h)
BOOMERANG_ADD_LOADER(Palm     palm/PalmBinaryFile.cpp palm/PalmBinaryFile.h palm/palmsystraps.h)
BOOMERANG_ADD_LOADER(MachO    machO/MachOBinaryFile.cpp machO/MachOBinaryFile.h machO/MachOBinaryFile.cpp machO/macho-apple.h)

#ADD_EXECUTABLE(bffDump bffDump.cpp BinaryFileFactory.cpp)
#TARGET_LINK_LIBRARIES(bffDump BinaryFile boom_base db)
#qt5_use_modules(bffDump Core)

IF(BUILD_TESTING)
  ADD_SUBDIRECTORY(unit_testing)
ENDIF()
