macro(BOOMERANG_ADD_LOADER name)
    set(target_name "${name}BinaryFile")
    add_library(${target_name} MODULE  ${ARGN} )
    if(WIN32)
            set_target_properties(${target_name} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/out/lib")
    endif()
    qt5_use_modules(${target_name} Core)
    set_target_properties(${target_name} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/out/lib")
endmacro()

BOOMERANG_ADD_LOADER(Elf      elf/ElfBinaryFile.cpp elf/ElfBinaryFile.h)
BOOMERANG_ADD_LOADER(Win32    exe/pe/Win32BinaryFile.cpp exe/pe/Win32BinaryFile.h microX86dis.c)
IF(MSVC)
    target_link_libraries(Win32BinaryFile Dbghelp.lib)
ENDIF()
BOOMERANG_ADD_LOADER(Exe      exe/dos/ExeBinaryFile.cpp exe/dos/ExeBinaryFile.h)
BOOMERANG_ADD_LOADER(DOS4GW   exe/dos4gw/DOS4GWBinaryFile.cpp exe/dos4gw/DOS4GWBinaryFile.h microX86dis.c)

BOOMERANG_ADD_LOADER(HpSom    hpsom/HpSomBinaryFile.cpp hpsom/HpSomBinaryFile.h)
BOOMERANG_ADD_LOADER(Palm     palm/PalmBinaryFile.cpp palm/PalmBinaryFile.h palm/palmsystraps.h)
BOOMERANG_ADD_LOADER(MachO    machO/MachOBinaryFile.cpp machO/MachOBinaryFile.h machO/MachOBinaryFile.cpp machO/macho-apple.h)

IF(BUILD_TESTING)
  ADD_SUBDIRECTORY(unit_testing)
ENDIF()
